added new test section

--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
         <p>
             <button class="przycisk">Usuń zdjęcie</button>
         </p>
-
+<section>
         <h3> TESTOWY NAGLOWEK </h3>
-        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis quibusdam dicta unde quia labore mollitia tenetur! Hic, consequatur magnam dolores error numquam et veniam ipsum tenetur, obcaecati labore maxime est.</P>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis quibusdam dicta unde quia labore mollitia tenetur! Hic, consequatur magnam dolores error numquam et veniam ipsum tenetur, obcaecati labore maxime est.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis quibusdam dicta unde quia labore mollitia tenetur! Hic, consequatur magnam dolores error numquam et veniam ipsum tenetur, obcaecati labore maxime est.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis quibusdam dicta unde quia labore mollitia tenetur! Hic, consequatur magnam dolores error numquam et veniam ipsum tenetur, obcaecati labore maxime est.
+
+        </P>
+</section>
     <h3 class="maly">Jakie są moje oczkiwania zawodowe?</h3>
     <p> Przede wszystkim nie odnajduję się w pracy w trybie 8-godzinnym, w biurze, z mikrozarządzaniem na głowie. <em>Bardzo</em> chciałabym pracować zdalnie, sama wyznaczać sobie
         godziny mojej pracy.<br>
