changed text in a text section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         </p>
 <section>
         <h3> TESTOWY NAGLOWEK </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis quibusdam dicta unde quia labore mollitia tenetur! Hic, consequatur magnam dolores error numquam et veniam ipsum tenetur, obcaecati labore maxime est.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis quibusdam dicta unde quia labore mollitia tenetur! Hic, consequatur magnam dolores error numquam et veniam ipsum tenetur, obcaecati labore maxime est.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis quibusdam dicta unde quia labore mollitia tenetur! Hic, consequatur magnam dolores error numquam et veniam ipsum tenetur, obcaecati labore maxime est.
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores maiores facere inventore ipsam nisi quos perspiciatis minus molestiae accusamus eligendi enim, beatae fugit magnam ducimus, veniam ipsa ex modi aliquam.
 
         </P>
 </section>
