--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O mnie</title>
     <meta property="og:image"content="images/HOMEPAGE.png">
+    <link rel="icon" href="images/icon.jpg">
 
     <link href="CSS/style.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
