photo and desription changed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         Nie miałam jeszcze okazji pracować w zawodzie, ponieważ nie znalazłam pracy, która spełniałaby moje oczekiwania. <br>
 
-        <img class="zdj" width="200" src="images/selfie.jpg" alt="">
+        <img class="zdj" width="200" src="images/Asia.jpg" alt="Moje zdjęcie">
         <p>
             <button class="przycisk">Usuń zdjęcie</button>
         </p>
