class added to image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 było znalezienie domu w Polsce, kotce z Albanii, która przejechała 1800 km do swojej rodziny w Polsce. W momencie gdy ją znalazłam była wychudzona i schorowana,
 teraz zdrowy i szczęśliwy kot-dlatego tak ważna jest adopcja. <br>
 
-<img width="200" src="images/koty.jpg" alt="Maszka i Fionka">
+<img class="zdj"width="300" src="images/koty.jpg" alt="Maszka i Fionka">
 </p>
 </body>
 </html>
